readable_test/typer/failing/WhileNotBool.grading.amy
object TestWhile1 
while (2) {
    val i : Int(32) = 0
}
end TestWhile1